// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-EHOje ftnBiB k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH bZkrPQ sc-htpNat fRcPmS k-Card__imageContainer k-SimpleCard__imageContainer"
  >
    <img
      alt=""
      className="k-Card__image k-SimpleCard__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<div
  className="sc-EHOje ftnBiB k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH koowCo sc-htpNat fRcPmS k-Card__imageContainer k-SimpleCard__imageContainer k-SimpleCard__imageContainer--ratio"
  >
    <img
      alt=""
      className="k-Card__image k-SimpleCard__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<div
  className="sc-EHOje ftnBiB k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH bZkrPQ sc-htpNat fRcPmS k-Card__imageContainer k-SimpleCard__imageContainer"
  >
    <div
      className="k-SimpleCard__playerButton"
      style={
        Object {
          "--k-SimpleCard-player-button-size": "4.375rem",
        }
      }
    >
      <span
        className="sc-bdVaJa bDWFJH k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="k-Card__image k-SimpleCard__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="sc-EHOje ftnBiB k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH bZkrPQ sc-htpNat fRcPmS k-Card__imageContainer k-SimpleCard__imageContainer"
  >
    <img
      alt=""
      className="k-Card__image k-SimpleCard__image"
      src=""
    />
  </div>
</div>
`;
